--- a/Revolution_mega/platformio.ini
+++ b/Revolution_mega/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	slocomptech/QList@^0.6.7
 	arduino-libraries/Arduino_AVRSTL@^1.2.5
 	kosme/arduinoFFT@^1.5.6
+	arkhipenko/TaskScheduler@^3.6.0
