Fixed Beat problems

--- a/Revolution_mega/platformio.ini
+++ b/Revolution_mega/platformio.ini
@@ -16,5 +16,6 @@ lib_deps =
 	fastled/FastLED@^3.5.0
 	slocomptech/QList@^0.6.7
 	arduino-libraries/Arduino_AVRSTL@^1.2.5
-	kosme/arduinoFFT@^1.5.6
-	arkhipenko/TaskScheduler@^3.6.0
+	nospampls/SchedTask@^1.1.4
+	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
+	ivanseidel/Gaussian@0.0.0-alpha+sha.e891a2a01f
