--- a/Revolution_nano/platformio.ini
+++ b/Revolution_nano/platformio.ini
@@ -9,9 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nanoatmega328]
+upload_port = COM[7]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
 lib_deps = 
-	fastled/FastLED@^3.5.0
+	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
 	slocomptech/QList@^0.6.7
+	fastled/FastLED@^3.5.0
+	nospampls/SchedTask@^1.1.4
