Fixed Hall Sensor Animation

--- a/Revolution_mega/platformio.ini
+++ b/Revolution_mega/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:megaatmega2560]
+; upload_port = COM[12]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
