--- a/Revolution_mega/platformio.ini
+++ b/Revolution_mega/platformio.ini
@@ -8,15 +8,27 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
-; upload_port = COM[12]
+; [env:megaatmega2560]
+; ; upload_port = COM[12]
+; platform = atmelavr
+; board = megaatmega2560
+; framework = arduino
+; lib_deps = 
+; 	fastled/FastLED@^3.5.0
+; 	slocomptech/QList@^0.6.7
+; 	arduino-libraries/Arduino_AVRSTL@^1.2.5
+; 	nospampls/SchedTask@^1.1.4
+; 	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
+; 	ivanseidel/Gaussian@0.0.0-alpha+sha.e891a2a01f
+
+
+[env:nanoatmega328]
+upload_port = COM[7]
 platform = atmelavr
-board = megaatmega2560
+board = nanoatmega328
 framework = arduino
 lib_deps = 
-	fastled/FastLED@^3.5.0
-	slocomptech/QList@^0.6.7
-	arduino-libraries/Arduino_AVRSTL@^1.2.5
-	nospampls/SchedTask@^1.1.4
 	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
-	ivanseidel/Gaussian@0.0.0-alpha+sha.e891a2a01f
+	slocomptech/QList@^0.6.7
+	fastled/FastLED@^3.5.0
+	nospampls/SchedTask@^1.1.4
